--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </style>
 </head>
 <body>
-    <h1>Leaderboard - Perplexity dei Modelli</h1>
+    <h1>Leaderboard - Models' Perplexity</h1>
     <table>
         <tr>
             <th>Rank</th>
-            <th>Modello</th>
+            <th>Model</th>
             <th>Perplexity (before)</th>
             <th>Perplexity (after)</th>
             <th>Standard Deviation (before)</th>
