--- a/index.html
+++ b/index.html
@@ -28,40 +28,36 @@
 </head>
 <body>
     <h1>Leaderboard - Models' Perplexity</h1>
+
+    <h2>Multilingual Models</h2>
     <table>
         <tr>
             <th>Rank</th>
             <th>Model</th>
-            <th>Perplexity (before)</th>
-            <th>Perplexity (after)</th>
-            <th>Standard Deviation (before)</th>
-            <th>Standard Deviation (after)</th>
+            <th>Average Perplexity</th>
+            <th>Standard Deviation</th>
         </tr>
-        <tr><td>1</td><td>Phi-3.5-mini-instruct</td><td>1.9371</td><td></td><td>0.627393</td><td></td></tr>
-        <tr><td>2</td><td>phi-4</td><td>1.9819</td><td></td><td>0.451902</td><td></td></tr>
-        <tr><td>3</td><td>aya-expanse-32b</td><td>2.05862</td><td></td><td>0.665546</td><td></td></tr>
-        <tr><td>4</td><td>aya-expanse-8b</td><td>2.08372</td><td></td><td>0.533397</td><td></td></tr>
-        <tr><td>5</td><td>gemma-2-27b-it</td><td>2.08955</td><td></td><td>0.848125</td><td></td></tr>
-        <tr><td>6</td><td>Mistral-Nemo-Instruct-2407</td><td>2.09962</td><td></td><td>1.30973</td><td></td></tr>
-        <tr><td>7</td><td>gemma-2-9b-it</td><td>2.11142</td><td></td><td>0.978569</td><td></td></tr>
-        <tr><td>8</td><td>Phi-3-mini-128k-instruct</td><td>2.22877</td><td></td><td>0.596523</td><td></td></tr>
-        <tr><td>9</td><td>Mistral-Small-24B-Instruct-2501</td><td>2.45142</td><td></td><td>1.6041</td><td></td></tr>
-        <tr><td>10</td><td>Mistral-7B-Instruct-v0.3</td><td>2.58129</td><td></td><td>1.39239</td><td></td></tr>
-        <tr><td>11</td><td>Qwen2.5-72B-Instruct</td><td>2.7459</td><td></td><td>1.28083</td><td></td></tr>
-        <tr><td>12</td><td>Qwen2.5-7B-Instruct</td><td>2.76081</td><td></td><td>1.08743</td><td></td></tr>
-        <tr><td>13</td><td>Ministral-8B-Instruct-2410</td><td>2.96757</td><td></td><td>11.4572</td><td></td></tr>
-        <tr><td>14</td><td>Phi-3-medium-128k-instruct</td><td>3.04512</td><td></td><td>3.17415</td><td></td></tr>
-        <tr><td>15</td><td>Qwen2.5-14B-Instruct</td><td>3.14115</td><td></td><td>1.24885</td><td></td></tr>
-        <tr><td>16</td><td>Qwen2.5-32B-Instruct</td><td>3.24327</td><td></td><td>1.47432</td><td></td></tr>
-        <tr><td>17</td><td>Qwen2.5-0.5B-Instruct</td><td>3.24844</td><td></td><td>0.72023</td><td></td></tr>
-        <tr><td>18</td><td>Qwen2.5-1.5B-Instruct</td><td>3.41444</td><td></td><td>0.809744</td><td></td></tr>
-        <tr><td>19</td><td>Llama-3.2-3B-Instruct</td><td>3.52717</td><td></td><td>3.38547</td><td></td></tr>
-        <tr><td>20</td><td>Qwen2.5-3B-Instruct</td><td>3.60572</td><td></td><td>2.44009</td><td></td></tr>
-        <tr><td>21</td><td>Phi-3.5-MoE-instruct</td><td>4.50914</td><td></td><td>1.81368</td><td></td></tr>
-        <tr><td>22</td><td>Llama-3.2-1B-Instruct</td><td>5.65277</td><td></td><td>8.82978</td><td></td></tr>
-        <tr><td>23</td><td>Llama-3.3-70B-Instruct</td><td>9.03916</td><td></td><td>15.6846</td><td></td></tr>
-        <tr><td>24</td><td>Llama-3.1-70B-Instruct</td><td>9.86582</td><td></td><td>13.8066</td><td></td></tr>
-        <tr><td>25</td><td>Llama-3.1-8B-Instruct</td><td>18.2804</td><td></td><td>29.8258</td><td></td></tr>
+        <tr><td>1</td><td>gemma-3-27b-it</td><td>1.74152</td><td>0.617274</td></tr>
+        <tr><td>2</td><td>phi-4</td><td>1.98343</td><td>0.452418</td></tr>
+        <tr><td>3</td><td>aya-expanse-32b</td><td>2.05807</td><td>0.664697</td></tr>
+        <tr><td>4</td><td>DeepSeek-V3-0324</td><td>2.30954</td><td>0.81696</td></tr>
+        <tr><td>5</td><td>Qwen2.5-72B-Instruct</td><td>2.77812</td><td>1.25996</td></tr>
+    </table>
+
+    <h2>Italian Models</h2>
+    <table>
+        <tr>
+            <th>Rank</th>
+            <th>Model</th>
+            <th>Average Perplexity</th>
+            <th>Standard Deviation</th>
+        </tr>
+        <tr><td>1</td><td>LLaMAntino-3-ANITA-8B-Inst-DPO-ITA</td><td>2.77502</td><td>1.87228</td></tr>
+        <tr><td>2</td><td>DanteLLM-7B-Instruct-Italian-v0.1</td><td>3.16828</td><td>1.31657</td></tr>
+        <tr><td>3</td><td>Minerva-7B-instruct-v1.0</td><td>7.27705</td><td>6.12963</td></tr>
+        <tr><td>4</td><td>extremITA-Camoscio-7b</td><td>17.7658</td><td>32.7655</td></tr>
+        <tr><td>5</td><td>Velvet-14B</td><td>1.27221e+16</td><td>2.34234e+17</td></tr>
     </table>
 </body>
 </html>
+
